--- a/arch/arm/configs/cyanogenmod_i8160_defconfig
+++ b/arch/arm/configs/cyanogenmod_i8160_defconfig
@@ -2932,8 +2932,8 @@ CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
-CONFIG_DECOMPRESS_LZO=y
-# CONFIG_DECOMPRESS_GZIP is not set
+# CONFIG_DECOMPRESS_LZO is not set
+CONFIG_DECOMPRESS_GZIP=y
 CONFIG_TEXTSEARCH=y
 CONFIG_TEXTSEARCH_KMP=y
 CONFIG_TEXTSEARCH_BM=y
